# UrsineMath

./: .gitignore  Clean-VS.bat  Generate-VS.bat  LICENSE  README.md
Dependencies/Testing/: catch.hpp
Source/: SMat3.cpp  SMat3.h  SMat4.cpp  SMat4.h  SQuat.cpp  SQuat.h  SVec3.cpp  SVec3.h  SVec4.cpp  SVec4.h  UrsineMath.cpp  Vec2.cpp  Vec2.h
TestDrivers/: CMakeLists.txt  MatrixLibTests.cpp  QuaternionTests.cpp  VectorLibTests.cpp
